admin functionalitites added: crud trips

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11,16 +11,28 @@ body{
     justify-content: flex-end;
 }
 
-.menu a {
+.menu > a {
     color:white;
     text-decoration:none;
     padding: 10px;
 }
 
-.menu a:hover{
+.menu > a:hover{
     color:yellow;
 }
 
 .padded_section{
     padding: 10px;
+}
+
+span.notification {
+    position: absolute;
+    right: 10px;
+    font-size: 1rem;
+    font-style: italic;
+    background: #3d815d;
+    color: white;
+    padding: 5px;
+    border-radius: 4px;
+    transition: all 1s ease-in;
 }
